--- a/css/global.css
+++ b/css/global.css
@@ -5,6 +5,12 @@
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+    padding: 8px;
+}
+
 body {
     font-family: system-ui, sans-serif;
     background: #f2f2f2;
@@ -54,6 +60,10 @@ nav ul li a:hover {
 }
 
 /* FOOTER */
+.header-footer {
+    margin-bottom: 30px;
+}
+
 footer{
     background-color: lightslategray;
     padding: 20px 16px;
