--- a/css/kurikulum.css
+++ b/css/kurikulum.css
@@ -3,12 +3,9 @@ html { font-size: 16px; }
 * { box-sizing: border-box; }
 
 body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Times New Roman', sans-serif;
-    background: #f6f7fb;
-    color: #1a1a1a;
+    font-family: system-ui, sans-serif;
+    background: #f2f2f2;
+    color: #333;
 }
 
 
